syntax = "proto3";

package hello;

service ListService {
    rpc GetList (ListRequest) returns (GetListReply) {}
}

message ListRequest {
    string name = 1;
}

message Pager {
    int64 page = 1;
    int64 page_size = 2;
    int64 total_rows = 3;
}

message List {
    int64 id = 1;
    string name = 2;
    uint32 state = 3;
}

message GetListReply {
   repeated List list = 1;
   Pager pager = 2;
}



